User manual path

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -33,7 +33,7 @@
               <%= link_to 'Contact', new_contact_form_path %>
             </li>
             <li>
-              <%= link_to 'User Manual', user_manual_path if path_exists?(:user_manual) %>
+              <%= link_to 'User Manual', user_manual_path if path_exists?(:user_manual_path) %>
             </li>
             <li class="c-translate">
               <%= link_to 'FAQ', faq_path if path_exists?(:faq_path) %>
