--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -63,10 +63,10 @@ $dropdown-max-height: 300px;
 
     &.notifications {
       padding: 0;
-      width: auto;
       max-height: 300px;
       top: 77px;
       box-shadow: 0px 0px 4px 0 rgba(0, 0, 0, 0.2);
+      overflow-y: auto;
 
       &:before {
         content: '';
@@ -83,7 +83,7 @@ $dropdown-max-height: 300px;
       .list {
         text-align: left;
         max-height: $dropdown-max-height - $button-y-padding;
-        overflow-x: auto;
+        white-space: normal;
 
         &.-filled {
           padding-bottom: 50px;
