--- a/app/views/posts/_list.html.erb
+++ b/app/views/posts/_list.html.erb
@@ -6,7 +6,7 @@
         <div class="c-card">
           <div class="wrapper">
             <h3 class="-underlined"><%= link_to p.title, p %></h3>
-            <p><%= p.body && p.body.truncate(300).html_safe %></p>
+            <p><%= p.body && truncate_html(p.body, :length => 300, :omission => "...").html_safe %></p>
             <% if controller_name === 'users' && is_owner?(@user, current_user) %>
               <%= link_to 'Edit', edit_post_path(p.id), class: "c-btn -secondary" %>
             <% end %>
