Title font sizes

--- a/app/assets/stylesheets/layouts/_app.scss
+++ b/app/assets/stylesheets/layouts/_app.scss
@@ -113,6 +113,10 @@
       color: $inverse-font-color;
     }
 
+    h2 {
+      font-size: $big-font-size;
+    }
+
     .c-counters {
       border-top: 1px solid rgba(255, 255, 255, 0.31);
     }
