--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -6,7 +6,7 @@ $dropdown-max-height: 300px;
   display: inline-flex;
   justify-content: flex-end;
   align-items: center;
-  padding: 0 $button-x-padding;
+  padding: 0 10px;
   height: 100%;
 
   > span {
@@ -63,10 +63,13 @@ $dropdown-max-height: 300px;
 
     &.notifications {
       padding: 0;
-      max-height: 300px;
       top: 77px;
       box-shadow: 0px 0px 4px 0 rgba(0, 0, 0, 0.2);
-      overflow-y: auto;
+
+      .container {
+        max-height: 300px;
+        overflow-y: auto;
+      }
 
       &:before {
         content: '';
@@ -98,22 +101,6 @@ $dropdown-max-height: 300px;
             margin-top: 8px;
           }
 
-          &.-btn {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            background-color: $primary-color;
-            text-align: center;
-
-            a {
-              color: $inverse-font-color;
-
-              &:hover {
-                color: $inverse-font-color;
-              }
-            }
-          }
-
           &.-unread {
             background-color: $base-bg-color;
           }
@@ -133,6 +120,21 @@ $dropdown-max-height: 300px;
         }
       }
     }
+
+    .delete-btn {
+      width: 100%;
+      background-color: $primary-color;
+      text-align: center;
+
+      a {
+        color: $inverse-font-color;
+
+        &:hover {
+          color: $inverse-font-color;
+        }
+      }
+    }
+
 
     ul {
       @extend %clearlist;
