--- a/app/assets/javascripts/views/notifications_view.js.erb
+++ b/app/assets/javascripts/views/notifications_view.js.erb
@@ -6,6 +6,7 @@
 
     events: {
       'click .js-action-notifications': 'handleClick',
+      'click .js-action-delete' : 'handleClickDelete',
       'click .list li': 'handleClick'
     },
 
@@ -27,12 +28,11 @@
       var isDropdown = this.el.getElementsByClassName('dropdown-content')[0].contains(e.target);
       if (!isDropdown) {
         this.trigger('toggle');
-      } else {
-        var target = $(e.target);
-        var item = target.is('li') ? target : target.closest('li');
-
-        item.hasClass('js-action-delete') && this.refresh();
       }
+    },
+
+    handleClickDelete: function(e) {
+      this.refresh();
     },
 
     toggleDropdown: function(open) {
