--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -125,6 +125,7 @@ $dropdown-max-height: 300px;
       width: 100%;
       background-color: $primary-color;
       text-align: center;
+      padding: 10px;
 
       a {
         color: $inverse-font-color;
