Change ranking static texts

--- a/app/assets/javascripts/templates/ranking.hbs
+++ b/app/assets/javascripts/templates/ranking.hbs
@@ -5,7 +5,7 @@
   </button>
 </h2>
 {{#if data}}
-  <p class="hint">*Estimated age-standardized rate per 100,000 adults</p>
+  <!-- <p class="hint">*Estimated age-standardized rate per 100,000 adults</p> -->
   <table>
     <thead>
       <tr>
@@ -13,7 +13,7 @@
           Country
         </th>
         <th class="-right">
-          Rate
+          Cases
         </th>
       </tr>
     </thead>
