Set organization location by default

--- a/app/assets/javascripts/templates/organization_form.hbs
+++ b/app/assets/javascripts/templates/organization_form.hbs
@@ -30,6 +30,7 @@
 
     <div class="column small-12">
       <label>Organization location</label>
+      <p class="c-required">* Field required</p>
       <div class="c-map-container">
         <div id="map-search" class="c-map-search">
           <input type="text" id="map-search-input">
