--- a/app/views/users/_desktop_show_intro.html.erb
+++ b/app/views/users/_desktop_show_intro.html.erb
@@ -43,8 +43,8 @@
               <% end %>
             </ul>
             <ul class="c-pipe-list">
-              <li><%= @following %> Following</li>
-              <li><%= @followers %> Followers</li>
+              <li><%= @following %> Following(s)</li>
+              <li><%= @followers %> Follower(s)</li>
             </ul>
           </div>
           <div class="column small-12 medium-6">
