--- a/app/views/home/_list.html.erb
+++ b/app/views/home/_list.html.erb
@@ -44,7 +44,7 @@
                 </h3>
               <% end %>
               <h2><%= link_to featured.title, event_path(featured.slug_or_id) %></h2>
-              <p><%= truncate(featured.description.html_safe, :length => 300) %></p>
+              <p><%= truncate_html(featured.description, :length => 300, :omission => "...").html_safe %></p>
               <p>
                 <% if featured.start_date.present? %>
                   <span><%= featured.start_date %></span>
