Project: new organization amendments

--- a/app/assets/javascripts/templates/organization_form.hbs
+++ b/app/assets/javascripts/templates/organization_form.hbs
@@ -31,6 +31,7 @@
     <div class="column small-12">
       <label>Organization location</label>
       <p class="c-required">* Field required</p>
+      <p id="latLngError" style="margin: 2px 0 10px 7px; font-size: 12px;">Select a location for your organization by entering an address in the search box or by dragging the map. The marker in the center indicates where your organization will be placed.</p>
       <div class="c-map-container">
         <div id="map-search" class="c-map-search">
           <input type="text" id="map-search-input">
