--- a/app/assets/javascripts/views/map_view.js.erb
+++ b/app/assets/javascripts/views/map_view.js.erb
@@ -44,9 +44,9 @@
       this.addListeners();
 
       // Set the map to the center yo trigger a pan
-      this.trigger('pan', {
-        target: this.map
-      });
+      // this.trigger('pan', {
+      //   target: this.map
+      // });
     },
 
     /**
