Terms added to user sign-up

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -24,6 +24,13 @@
             <%= f.input :password_confirmation, required: true %>
           </div>
 
+          <div class="form-row">
+            <%= f.input :terms, required: true %>
+            <span>
+              Click here if you have read, understood, and agree to <a href="/terms-of-use">The GO Map websites Terms of Use</a> and <a href="/privacy-policy">Privacy Policy</a>
+            </span>
+          </div>
+
           <div class="form-actions">
             <%= f.button :submit, "Sign up", class: 'c-btn -primary' %>
 
