adds terms acceptance

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -25,7 +25,7 @@
           </div>
 
           <div class="form-row">
-            <%= f.input :terms, required: true %>
+            <%= f.input :terms, as: :boolean, required: true %>
             <span>
               Click here if you have read, understood, and agree to <a href="/terms-of-use">The GO Map websites Terms of Use</a> and <a href="/privacy-policy">Privacy Policy</a>
             </span>
