Add titles along the app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title><%= yield :title %> - Global Cancer Project Map</title>
+    <title><%= yield :title %> - The GO Map</title>
 
     <% if browser.device.ipad? %>
       <meta name="viewport" content="width=1024">
