--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="column small-12 align-middle">
-        <p>Last update: <%= @post.updated_at.strftime("%d-%m-%Y") %></p>
+        <p>Last update: <%= @post.updated_at.strftime("%Y-%m-%d") %></p>
       </div>
     </div>
   </section>
