Investigator changed along the app

--- a/app/views/home/_desktop_intro.html.erb
+++ b/app/views/home/_desktop_intro.html.erb
@@ -32,7 +32,7 @@
             <div class="icon">
               <svg class="c-icon -big -inverse-stroke"><use xlink:href="#icon-contact"></use></svg>
             </div>
-            <p>Contact other users and investigators</p>
+            <p>Contact other users</p>
           <% end %>
         </li>
       </ul>
