--- a/app/views/investigators/_list.html.erb
+++ b/app/views/investigators/_list.html.erb
@@ -31,7 +31,7 @@
   <div class="row collapse">
     <div class="column small-12">
       <div class="c-card">
-        <p>No investigators</p>
+        <p>No project lead/collaborators</p>
       </div>
     </div>
   </div>
