--- a/app/views/users/_desktop_network.html.erb
+++ b/app/views/users/_desktop_network.html.erb
@@ -2,11 +2,11 @@
   <div class="column small-12 medium-8 -column">
     <article>
       <div class="l-content -br-bottom wrapper -no-br">
-        <h2><%= t 'investigators' %> (<%= @followPeople.size %>)</h2>
+        <h2>People (<%= @followPeople.size %>)</h2>
 
         <% if !@followPeople.any? %>
           <div class="list">
-            <p>No investigators</p>
+            <p>No people</p>
           </div>
         <% end %>
       </div>
