--- a/app/assets/javascripts/templates/investigator_form.hbs
+++ b/app/assets/javascripts/templates/investigator_form.hbs
@@ -2,7 +2,7 @@
 
   <div class="row">
     <div class="column small-12">
-      <h2 class="c-title">New Investigator</h2>
+      <h2 class="c-title">New Project Lead/Collaborator</h2>
     </div>
   </div>
 
