--- a/app/assets/javascripts/templates/investigator_organization.hbs
+++ b/app/assets/javascripts/templates/investigator_organization.hbs
@@ -1,5 +1,5 @@
 
-  <h3 class="c-title">Investigators & organizations</h3>
+  <h3 class="c-title">People & Organizations</h3>
 
   {{#each elements}}
 
@@ -7,7 +7,7 @@
 
     <div class="row">
       <div class="column small-12 medium-6">
-        <h4 class="c-title">Investigators</h4>
+        <h4 class="c-title">Project Lead/Collaborator</h4>
         <div id="investigator-{{id}}" class="investigator c-select"></div>
       </div>
       <div class="column small-12 medium-6">
