--- a/app/views/users/_mobile_network.html.erb
+++ b/app/views/users/_mobile_network.html.erb
@@ -25,7 +25,7 @@
     <article class="c-network-list" data-name="investigators">
       <div class="l-content -br-bottom wrapper js-toggle-list">
         <h2>
-          <%= t 'investigators' %> (<%= @followPeople.size %>)
+          People (<%= @followPeople.size %>)
           <svg class="c-icon icon-arrow -medium -secondary">
             <use xlink:href="#icon-arrow"></use>
           </svg>
@@ -33,7 +33,7 @@
 
         <% if @followPeople.size <= 0 %>
           <div class="list">
-            <p>No investigators</p>
+            <p>No people</p>
           </div>
         <% end %>
       </div>
